<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="#000" android:orientation="vertical">

	<RelativeLayout android:layout_height="fill_parent"
		android:layout_width="wrap_content" android:orientation="vertical"
		android:background="#000000" android:layout_alignParentTop="true">

		<LinearLayout android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:orientation="vertical"
			android:background="#fff" android:layout_centerInParent="true" android:layout_marginTop="-20dip" android:id="@+id/linearLayout2">
			<LinearLayout android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:id="@+id/rootLayout"
				android:background="#cccccc" android:clipChildren="true"
				android:orientation="vertical">
				<com.ui.MoodEntryCustumView android:id="@+id/graphCustomView"
					android:layout_width="300dip" android:layout_height="300dip" />
			</LinearLayout>
		</LinearLayout>
		 
		<TextView android:id="@+id/chooseTextView" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_above="@+id/locationRelativeLayout" android:text="@string/location_label" android:layout_centerInParent="true"></TextView>
		<ImageView android:id="@+id/buttonInfo" android:src="@drawable/info" 
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:padding="12dp" android:layout_alignBottom="@+id/chooseTextView" android:layout_alignParentRight="true" android:contentDescription="@string/help_button"/>
			
		<RelativeLayout android:id="@+id/locationRelativeLayout" android:layout_width="fill_parent" android:layout_height="56dp" android:layout_marginTop="2dp" android:layout_alignParentBottom="true" android:background="#FF333333" android:layout_centerHorizontal="true">
			<ImageButton android:src="@drawable/work4_2x"    android:id="@+id/workImageButton"  android:layout_height="54dp" android:layout_width="80dp"  android:scaleType="fitXY" android:padding="0dp" android:layout_centerVertical="true" android:background="#FF555555" android:contentDescription="@string/location_work"></ImageButton>
			<ImageButton android:src="@drawable/home4_2x"    android:id="@+id/homeImageButton"  android:layout_toRightOf="@+id/workImageButton" android:layout_height="54dp" android:layout_width="80dp"  android:scaleType="fitXY" android:layout_centerVertical="true" android:padding="0dp" android:background="#FF555555" android:contentDescription="@string/location_home"></ImageButton>
			<ImageButton android:src="@drawable/onthego4_2x" android:id="@+id/onGoImageButton"  android:layout_toRightOf="@+id/homeImageButton" android:layout_height="54dp" android:layout_width="80dp"  android:scaleType="fitXY" android:padding="0dp" android:layout_centerVertical="true" android:background="#FF555555" android:contentDescription="@string/location_on_the_go"></ImageButton>
			<ImageButton android:src="@drawable/others4_2x"  android:id="@+id/otherImageButton" android:layout_height="54dp" android:layout_width="80dp"  android:scaleType="fitXY" android:padding="0dp" android:layout_toRightOf="@+id/onGoImageButton" android:layout_centerVertical="true" android:background="#FF111111" android:contentDescription="@string/location_on_the_go"></ImageButton>
		</RelativeLayout>

		<TextView
		    android:id="@+id/helpTextView"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_above="@+id/chooseTextView"
		    android:layout_alignLeft="@+id/linearLayout2"
		    android:layout_alignWithParentIfMissing="false"
		    android:gravity="center"
		    android:text="-" 
		    android:layout_centerHorizontal="true" 
		    android:layout_alignRight="@+id/linearLayout2"/>
		
	</RelativeLayout>
	
	<RelativeLayout android:id="@+id/headingRelativeLayout" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_alignParentTop="true" android:layout_alignParentLeft="false">
		<Button   android:id="@+id/settingsButton" android:layout_height="wrap_content"  android:layout_width="wrap_content" android:layout_alignParentLeft="true" android:text="@string/settings_label" android:minWidth="75dip"></Button>
		<TextView android:id="@+id/titleTextView" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:textStyle="bold" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:text="@string/app_name"></TextView>
		<Button   android:id="@+id/TrendsButtonLayout" android:layout_height="wrap_content"  android:layout_width="wrap_content" android:layout_alignParentRight="true" android:text="@string/trends_label" android:visibility="invisible" android:minWidth="75dip"></Button>
	</RelativeLayout>
	
</RelativeLayout>